--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://sodium.roch.website/git/pako/yoctolib_php.git/
 Package: libphp-yocto
 Architecture: all
 Depends: ${misc:Depends}, php-common
-Suggests: libphp-yocto-doc
+Suggests: libphp-yocto-doc, yocto-virtualhub
 Description: PHP libraries for access to USB Yoctopuce devices
  Yoctopuce designs, manufactures and sells USB devices for automatic system 
  builders.
